[gd_scene load_steps=3 format=3 uid="uid://bfj4yyps3vudy"]

[ext_resource type="Script" uid="uid://ockei8fh5u2c" path="res://ui/components/character_equipment_panel.gd" id="1_0x8k2"]
[ext_resource type="Theme" uid="uid://bxlt2ju7qgrqv" path="res://theme.tres" id="2_theme"]

[node name="CharacterEquipmentPanel" type="Panel"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("2_theme")
script = ExtResource("1_0x8k2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0

[node name="HeaderContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CharacterName" type="Label" parent="VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Character Name"
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="CloseButton" type="Button" parent="VBoxContainer/HeaderContainer"]
layout_mode = 2
text = "X"
custom_minimum_size = Vector2(30, 30)

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="EquipmentContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 3


[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Equipment Bonuses:"
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.9, 0.9, 1, 1)

[node name="StatsList" type="RichTextLabel" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 100)
bbcode_enabled = true
fit_content = true
scroll_active = false
